--- a/index.html
+++ b/index.html
@@ -1,172 +1,223 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-<link rel="stylesheet" href="css/flexslider.css" type="text/css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-<script src="js/jquery.flexslider.js"></script>
-<link rel="stylesheet" href="css/estilos.css">
-<link rel="stylesheet" href="css/slider.css">
-<script type="text/javascript" charset="utf-8">
 
-$(window).load(function() {
-    $('.flexslider').flexslider({
-    	touch: true,
-    	pauseOnAction: false,
-    	pauseOnHover: false,
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="css/flexslider.css" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <script src="js/jquery.flexslider.js"></script>
+  <link rel="stylesheet" href="css/estilos.css">
+  <link rel="stylesheet" href="css/slider.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <script type="text/javascript" charset="utf-8">
+
+    $(window).load(function () {
+      $('.flexslider').flexslider({
+        touch: true,
+        pauseOnAction: false,
+        pauseOnHover: false,
+      });
     });
-  });
-</script>
-  </head>
-  <body>
+  </script>
+</head>
 
-    <div class="flexslider">
-      <img src="img/LOGO.png" class="logo">
-		<ul class="slides">
-			<li>
-				<img src="img/BANNER.png" alt="">
-				<section class="flex-caption">
-				</section>
-			</li>
-			<li>
-				<img src="img/banner2.png" alt="">
-				<section class="flex-caption">
-				</section>
-			</li>
-			<li>
-				<img src="img/banner3.jpg" alt="">
-				<section class="flex-caption ">
-				</section>
-			</li>
-		</ul>
+<body>
+  <header class="header">
+      <nav class="navbar">
+        <ul class="nav-list">
+        <li><a href="#nosotros">Nosotros</a></li>
+        <li><a href="#servicio">Servicio</a></li>
+        <li><a href="#atractivos">Atractivos Turisticos</a></li>
+        <li><a href="#guia">Guia de animales</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+      </ul>
+      </nav>
+  </header>
+
+  <div class="flexslider">
+    <img src="img/LOGO.png" class="logo">
+    <ul class="slides">
+      <li>
+        <img src="img/BANNER.png" alt="">
+        <section class="flex-caption">
+        </section>
+      </li>
+      <li>
+        <img src="img/banner2.png" alt="">
+        <section class="flex-caption">
+        </section>
+      </li>
+      <li>
+        <img src="img/banner3.jpg" alt="">
+        <section class="flex-caption ">
+        </section>
+      </li>
+    </ul>
 
 
-	</div>
-
-<div style="clear:both;"></div>
-<div align="center">
-  <ul class="nav" style="font-family:tahoma; background-color: rgba(0, 0, 0, 0.7); background: rgba(0, 0, 0, 0.5); color: rgba(0, 0, 0, 0.7);">
-    <li><a href="#nosotros" >Nosotros</a></li>
-    <li><a href="#servicio">Servicio</a></li>
-    <li><a href="#atractivos">Atractivos Turisticos</a></li>
-    <li><a href="#guia">Guia de animales</a></li>
-    <li><a href="#contacto">Contacto</a></li>
-  </ul>
-</div>
-<div style="clear:both;"></div>
-
-<!– ------------------------------------------------------------------------------------------------–>
-
-<section id="nosotros">
-  <img src="img/hojas izquierda.png" style="float:left; width:30%;" class="imagen1">
-  <div style="float:left; width:40%;" align="center">
-    <h1 style="color:#a0c802; font-size:60px; text-align:center; padding-top:60px;font-family: 'DK Midnight Chalker';">NOSOTROS</h1>
-    <p style="font-size:22px; color:#828282; max-width:450px; text-align:center; line-height:35px;padding-top:40px;">Somos un tour operador con un staff capacitado
-    y experimentado para brindarle la mejor experiencia
-  de viaje en la amazonia peruana</p>
   </div>
-  <img src="img/hojas derecha.png" style="float:left; width:30%;" class="imagen2">
-</section>
-<div style="clear:both;"></div>
+ <!-- <div class="fixed-container">
+    <ul class="nav"
+      style="font-family:tahoma; background-color: rgba(0, 0, 0, 0.7); background: rgba(0, 0, 0, 0.5); color: rgba(0, 0, 0, 0.7);">
+      <li><a href="#nosotros">Nosotros</a></li>
+      <li><a href="#servicio">Servicio</a></li>
+      <li><a href="#atractivos">Atractivos Turisticos</a></li>
+      <li><a href="#guia">Guia de animales</a></li>
+      <li><a href="#contacto">Contacto</a></li>
+    </ul>
+  </div>-->
 
-<!– ------------------------------------------------------------------------------------------------–>
+  <!– ------------------------------------------------------------------------------------------------–>
 
-<div class="">
-  
-</div>
-<section id="servicio">
-  <div style="width:100%;">
-  <img src="img/arriba.png" style="width:100%; height: 470px; display:block;">
-  <img src="img/abajo.png"  style="width:100%; height:470px">
-  <h1 style="color: #ffffff;font-size: 60px;text-align: center;position: relative;  bottom: 820px;font-family: 'DK Midnight Chalker';">SERVICIOS</h1>
-  </div>
+    <section class="nosotros" id="nosotros">
+      <div class="div-nosotros">
+        <h1
+          style="color:#a0c802; font-size:60px; text-align:center; padding-top:60px;font-family: 'DK Midnight Chalker';"
+          class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="0s">NOSOTROS</h1>
+        <p class="wow slideInLeft info-nosotros" data-wow-duration="2s" data-wow-delay="0s">Somos un tour operador con
+          un staff capacitado
+          y experimentado para brindarle la mejor experiencia
+          de viaje en la amazonia peruana</p>
+      </div>
+    </section>
+    <div style="clear:both;"></div>
 
- <div class="columnax3">
-   <a href="#"><img src="img/Hospedajes.png"></a>
-   <h2 style="font-family: 'DK Midnight Chalker';">HOSPEDAJES</h2>
- </div>
+    <!– ------------------------------------------------------------------------------------------------–>
 
- <div class="columnax3">
-   <a href="#"><img src="img/ruta.png"></a>
-   <h2 style="font-family: 'DK Midnight Chalker';">GUIA DE RUTA</h2>
- </div>
+      <div class="">
 
-<div class="columnax3">
- <a href="#"><img src="img/interprete.png"></a>
- <h2 style="font-family: 'DK Midnight Chalker';">GUIA INTERPRETE</h2>
-</div>
+      </div>
+      <section class="servicios" id="servicio">
+        <img class="fondo-web" style="width:100%; position:absolute; height: 126%;" src="./img/fondo-servicios.png" alt="">
+        <img class="fondo-mobile" style="width:100%; position:absolute; height: 105%;" src="./img/fondo-servicios-mobile.png" alt="">
+        <div class="section-services">
+          <h1 style="color: #ffffff;font-size: 60px;text-align: center;font-family: 'DK Midnight Chalker';"
+            class="wow slideInLeft">SERVICIOS</h1>
+          <div class="contenedor-services">
+            <div class="columnax3">
+              <a href="#"><img src="img/Hospedajes.png" class="wow rotateIn"></a>
+              <h2 style="font-family: 'DK Midnight Chalker';" class="wow rotateIn">HOSPEDAJES</h2>
+            </div>
 
-<div class="columnax3">
- <a href="#"><img src="img/Camping.png"></a>
- <h2 style="font-family: 'DK Midnight Chalker';">CAMPING</h2>
-</div>
+            <div class="columnax3">
+              <a href="#"><img src="img/ruta.png" class="wow rotateIn"></a>
+              <h2 style="font-family: 'DK Midnight Chalker';" class="wow rotateIn">GUIA DE RUTA</h2>
+            </div>
 
-<div class="columnax3">
- <a href="#"><img src="img/Deporte aventura.png"></a>
- <h2 style="font-family: 'DK Midnight Chalker';">DEPORTE AVENTURA</h2>
-</div>
+            <div class="columnax3">
+              <a href="#"><img src="img/interprete.png" class="wow rotateIn"></a>
+              <h2 style="font-family: 'DK Midnight Chalker';" class="wow rotateIn">GUIA INTERPRETE</h2>
+            </div>
 
-<div class="columnax3">
- <a href="#"><img src="img/Bicicleta.png"></a>
- <h2 style="font-family: 'DK Midnight Chalker';">BICICLETA</h2>
-</div>
-</section>
-<div style="clear:both;"></div>
+            <div class="columnax3">
+              <a href="#"><img src="img/Camping.png" class="wow rotateIn"></a>
+              <h2 style="font-family: 'DK Midnight Chalker';" class="wow rotateIn">CAMPING</h2>
+            </div>
 
-<!– ------------------------------------------------------------------------------------------------–>
+            <div class="columnax3">
+              <a href="#"><img src="img/Deporte aventura.png" class="wow rotateIn"></a>
+              <h2 style="font-family: 'DK Midnight Chalker';" class="wow rotateIn">DEPORTE AVENTURA</h2>
+            </div>
+
+            <div class="columnax3">
+              <a href="#"><img src="img/Bicicleta.png" class="wow rotateIn"></a>
+              <h2 style="font-family: 'DK Midnight Chalker';" class="wow rotateIn">BICICLETA</h2>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div style="clear:both;"></div>
+
+      <!– ------------------------------------------------------------------------------------------------–>
 
 
-<section style="width:100%;height:auto;">
-  <div class="parte1" id="atractivos">
-    <img src="img/atractivo.png">
-    <h1 style="font-family: 'DK Midnight Chalker';">ATRACTIVOS TURISTICOS</h1>
-    <p>Una atraccion turistica, es un lugar de interes que los turistas visitan, normalmente
-    por su valor cultural, su significancia historica, su belleza, ofrece ocio,
-  aventura y diversion.</p>
-  <a class="galeria">Ver galeria</a>
-  </div>
-  <div class="parte2" id="guia">
-    <img src="img/animales.png">
-    <h1 style="font-family: 'DK Midnight Chalker';">ANIMALES EXÓTICOS</h1>
-    <p>Los animales mas exóticos del mundo. En el planeta tierra encontramos una variedad inmensa de animales
-    y seres vivos con cualidades unicas que los hacen sumamente especiales y distintos</p>
-    <a class="galeria2">Ver galeria</a>
-  </div>
-</section>
-<div style="clear:both;"></div>
+        <section class="section-atractivos" style="width:100%;height:auto;">
+          <div class="parte1" id="atractivos">
+            <!-- <div class="wow wobble" data-wow-duration="2s" data-wow-delay="0s">-->
+            <div class="div-atractivos">
+              <img src="img/atractivo.png">
+            </div>
+            <div class="div-contenido">
+              <h1 style="font-family: 'DK Midnight Chalker';">ATRACTIVOS TURISTICOS</h1>
+              <p>Una atraccion turistica, es un lugar de interes que los turistas visitan, normalmente
+                por su valor cultural, su significancia historica, su belleza, ofrece ocio,
+                aventura y diversion.</p>
+              <a class="galeria">Ver galeria</a>
+            </div>
+            <!-- </div>-->
+          </div>
+          <div class="parte2" id="guia">
+            <div class="div-animales-contenido">
+              <h1 style="font-family: 'DK Midnight Chalker';">ANIMALES EXÓTICOS</h1>
+              <p>Los animales mas exóticos del mundo. En el planeta tierra encontramos una variedad inmensa de animales
+                y seres vivos con cualidades unicas que los hacen sumamente especiales y distintos</p>
+              <a class="galeria2">Ver galeria</a>
+            </div>
+            <div class="div-animales">
+              <img src="img/animales.png">
+            </div>
+            <!-- <div class="wow rubberBand" data-wow-duration="2s" data-wow-delay="0s">-->
+            <!--  </div>-->
+          </div>
+        </section>
 
-<!– ------------------------------------------------------------------------------------------------–>
+        <!– ------------------------------------------------------------------------------------------------–>
 
-<footer id="contacto">
-<img src="img/footer.png">
-<div class ="contacto">
-  <h1 style="font-family: 'DK Midnight Chalker';">CONTACTO</h1>
-  <p>Jiron Loreto Nro 319, Puerto Maldonado, Tambopata, Peru</p>
-  <span style="color:#a0c802; ">Oficinna:</span><span style="color:#ffffff"> +5182502213</span>
-  <span style="color:#a0c802; ">RPC1:</span><span style="color:#ffffff"> 969747709</span>
-  <span style="color:#a0c802; ">RPC2:</span><span style="color:#ffffff"> 959137386</span><br>
-  <span style="color:#a0c802; ">Horario de Atención: </span><span style="color:#ffffff">Lunes a Domingo de 8am a 9pm</span>
+          <footer id="contacto">
 
-</div>
+            <img class="fondo-footer" src="img/footer.png">
+            <div class="contacto">
+              <!-- <div class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="0s" >-->
+              <h1 style="font-family: 'DK Midnight Chalker';">CONTACTO</h1>
+              <p>Jiron Loreto Nro 319, Puerto Maldonado, Tambopata, Peru</p>
+              <span style="color:#a0c802; ">Oficinna:</span><span style="color:#ffffff"> +5182502213</span>
+              <span style="color:#a0c802; ">RPC1:</span><span style="color:#ffffff"> 969747709</span>
+              <span style="color:#a0c802; ">RPC2:</span><span style="color:#ffffff"> 959137386</span><br>
+              <span style="color:#a0c802; ">Horario de Atención: </span><span style="color:#ffffff">Lunes a Domingo de
+                8am a 9pm</span>
+              <!-- </div>-->
+            </div>
 
-<form class="" action="index.html" method="post">
-  <div class="formulario">
-  <input type="text" name="nom" placeholder="Nombres" class="caja1">
-  <input type="text" name="email" placeholder="e-mail" class="caja1">
-  <textarea name="asunto" rows="10" cols="30" placeholder="Asunto" class="caja2"></textarea>
-  <button type="button" name="enviar" class="boton">Enviar</button>
+            <div class="formulario">
+              <div class="form-group">
+                <input type="text" name="nom" placeholder="Nombres" class="caja1">
+              </div>
+              <div class="form-group">
+                <input type="text" name="email" placeholder="e-mail" class="caja1">
+              </div>
+              <div class="form-group-asunto">
+                <textarea name="asunto" rows="10" cols="30" placeholder="Asunto" class="caja2"></textarea>
+              </div>
+              <!--  <div class="wow rotateIn" data-wow-duration="2s" data-wow-delay="0s">  -->
 
-</div>
-</form>
+              <button type="button" name="enviar" class="boton">Enviar</button>
+              <!-- </div>-->
+            </div>
+          </footer>
+          <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
 
-</footer>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
+          </script>
+          <script src="js/secciones.js">
+          </script>
+          <script src="js/WOW.js"></script>
+          <script>
+            wow = new WOW(
+              {
+                boxClass: 'wow',      // default
+                animateClass: 'animated', // default
+                offset: 0,          // default
+                mobile: true,       // default
+                live: true        // default
+              }
+            )
+            wow.init();
+          </script>
+          <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js"
+            integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
+            crossorigin="anonymous"></script>
+</body>
 
-</script>
-<script src="js/secciones.js">
-
-</script>
-  </body>
 </html>
