--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <link rel="stylesheet" href="css/flexslider.css" type="text/css">
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <link rel="stylesheet" href="css/flexslider.css">
   <link rel="stylesheet" href="css/estilos.css">
   <link rel="stylesheet" href="css/slider.css">
   <link rel="stylesheet" href="css/animate.css">
@@ -187,9 +187,7 @@
               <!-- </div>-->
             </div>
           </footer>
-          <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
-
-          </script>
+          <script src="js/jquery-3.3.1.min.js"></script>
           <script src="js/secciones.js">
           </script>
           <script src="js/WOW.js"></script>
