--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
             <div class="contacto wow fadeInLeft" data-wow-duration="2s" data-wow-delay="0s">
               <!-- <div class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="0s" >-->
               <h1 style="font-family: 'DK Midnight Chalker';">CONTACTO</h1>
-              <p>Jiron Loreto Nro 319, Puerto Maldonado, Tambopata, Peru</p>
-              <span style="color:#a0c802; ">Oficinna:</span><span style="color:#ffffff"> +5182502213</span>
-              <span style="color:#a0c802; ">RPC1:</span><span style="color:#ffffff"> 969747709</span>
-              <span style="color:#a0c802; ">RPC2:</span><span style="color:#ffffff"> 959137386</span><br>
-              <span style="color:#a0c802; ">Horario de Atención: </span><span style="color:#ffffff">Lunes a Domingo de
+              <p style="font-size: 25px;">Jiron Loreto Nro 319, Puerto Maldonado, Tambopata, Peru</p>
+              <span style="font-size: 25px;color:#a0c802; ">Oficinna:</span><span style="font-size: 25px;color:#ffffff"> +5182502213</span>
+              <span style="font-size: 25px;color:#a0c802; ">RPC1:</span><span style="font-size: 25px;color:#ffffff"> 969747709</span>
+              <span style="font-size: 25px;color:#a0c802; ">RPC2:</span><span style="font-size: 25px;color:#ffffff"> 959137386</span><br>
+              <span style="font-size: 25px;color:#a0c802; ">Horario de Atención: </span><span style="font-size: 25px;color:#ffffff">Lunes a Domingo de
                 8am a 9pm</span>
               <!-- </div>-->
             </div>
